--- a/data/playbooks/roles/ontap/aggregate/tasks/facts_multi.yml
+++ b/data/playbooks/roles/ontap/aggregate/tasks/facts_multi.yml
@@ -3,5 +3,5 @@
 ## Naming facts
 - name: Merge Extravars
   ansible.builtin.set_fact:
-    aggregates : "{{ 'aggregates' | merge_lists(d=vars_defautls,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }}"
+    aggregates : "{{ 'aggregates' | merge_lists(d=vars_defaults,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }}"
 
