--- a/data/playbooks/roles/ontap/lif/tasks/facts_multi.yml
+++ b/data/playbooks/roles/ontap/lif/tasks/facts_multi.yml
@@ -3,5 +3,5 @@
 ## Naming facts
 - name: Merge Extravars
   ansible.builtin.set_fact:
-    lifs : "{{ 'lifs' | merge_lists(d=vars_defautls,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }}"
+    lifs : "{{ 'lifs' | merge_lists(d=vars_defaults,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }}"
 
