--- a/data/forms/lod.yaml
+++ b/data/forms/lod.yaml
@@ -72,7 +72,7 @@
   roles:
     - public
   categories:
-    - MAF
+    - LOD
   tileClass: has-background-info-light
   icon: bullseye
   credentials:
@@ -246,6 +246,223 @@
       expression: fn.fnRestBasic('get','https://$(cluster_source.management_ip)/api/svm/svms','','aiqum_rest','[.records[]
         | .name ]')
 
+- name: Create volume advanced
+  type: ansible
+  playbook: test_create_lod_volume_advanced.yml
+  showHelp: true
+  help: |
+    This form will create a volume into an svm, but also cifs share, export, ...  
+    It allows dr as well
+  description: ""
+  roles:
+    - public
+  categories:
+    - LOD
+  tileClass: has-background-info-light
+  icon: bullseye
+  credentials:
+    ontap: ontap_rest
+    aiqum: aiqum_rest
+  fields:
+    - name: isDr
+      label: Enable DR
+      line: dr
+      type: checkbox
+      model: vars_external.meta.is_dr
+    - name: dr_type
+      type: expression
+      runLocal: true
+      label: DR Type
+      line: dr
+      expression: "((x=0)=>{return (x==1)?'svm_dr':'volume_dr'})($(snapmirrorDestinations))"
+      model: vars_external.meta.dr_type
+      dependencies:
+      - name: isDr
+        values: 
+        - true
+    - name: hasDr
+      type: expression
+      runLocal: true
+      label: Has Dr
+      line: dr
+      expression: "((x=0)=>{return x==1})($(drSvm))"
+      dependencies:
+      - name: isDr
+        values: 
+        - true
+      regex:
+        expression: "true"
+        description: "This svm has no DR enabled"
+    - name: location
+      label: Location
+      type: enum
+      dbConfig: self
+      default: __auto__
+      query: |
+        SELECT DISTINCT l.* FROM $(LOD_ENV_QUERY)
+      columns:
+        - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1
+      model: vars_external.meta.location
+    - name: environment
+      label: Environment
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: |
+        SELECT DISTINCT e.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id)
+      columns:
+        - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1
+      model: vars_external.meta.environment
+    - name: service
+      label: Service
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: >
+        SELECT DISTINCT s.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id) AND
+        e.id=$(environment.id)
+      columns:
+        - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1
+      model: vars_external.meta.service
+    - name: service_level
+      label: Service Level
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: >
+        SELECT DISTINCT sl.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id) AND
+        e.id=$(environment.id) AND s.id=$(service.id)
+      columns:
+        - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1
+      model: vars_external.meta.service_level
+    - name: resource
+      label: Resource
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: >
+        SELECT DISTINCT r.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id) AND
+        e.id=$(environment.id) AND s.id=$(service.id) AND
+        sl.id=$(service_level.id) 
+      columns:
+        - cluster
+        - dr
+        - code
+      valueColumn: code
+      group: Resource selection
+      line: rs_line2
+      model: vars_external.meta.resource
+    - name: cluster_source
+      label: cluster
+      group: Resource
+      type: expression
+      hide: true
+      expression: fn.fnRestBasic('get','https://$(AIQUM_HOST)/api/datacenter/cluster/clusters?name=$(resource.cluster)','','aiqum_rest','.records[]
+        | {"name":.name,"management_ip":.management_ip}')
+      required: true
+      model: vars_external.source.cluster
+    - name: cluster_dest
+      label: Dr cluster
+      group: Resource
+      type: expression
+      hide: true
+      expression: fn.fnRestBasic('get','https://$(AIQUM_HOST)/api/datacenter/cluster/clusters?name=$(resource.dr)','','aiqum_rest','.records[]
+        | {"name":.name,"management_ip":.management_ip}')
+      required: true
+      model: vars_external.destination.cluster
+    - name: cr
+      label: Change request
+      required: true
+      type: text
+      placeholder: CR######
+      regex:
+        expression: ^CR[0-9]{6}$
+        description: Must be format CR######
+      model: vars_external.meta.change_request
+
+    - name: customer
+      type: text
+      group: Resource selection
+      line: rs_line2
+      label: Customer Id
+      placeholder: A41
+      default: MIR
+      regex:
+        expression: ^[A-Z0-9]{3}$
+        description: A valid Alfanumeric customer id
+      required: true
+      model: vars_external.meta.customer
+    - name: svm_name
+      type: expression
+      runLocal: true
+      hide: true
+      expression: "'$(resource.code)_$(customer)'.toLowerCase()"
+      dependencies:
+        - name: customer
+          isValid: true
+      noOutput: true
+    - name: svm
+      type: enum
+      required: true
+      default: __auto__
+      group: Svm
+      line: svm
+      label: Svm name
+      expression: fn.fnRestBasic('get','https://$(cluster_source.management_ip)/api/svm/svms?name=$(svm_name)','','ontap_rest','[.records[]
+        | .name ]')
+      dependencies:
+        - name: customer
+          isValid: true
+      model: vars_external.source.svm.name
+    - name: snapmirrorDestinations
+      type: expression
+      required: true
+      expression: fn.fnRestBasic('get','https://$(cluster_source.management_ip)/api/snapmirror/relationships/?list_destinations_only=true&source.svm.name=$(svm.name)','','ontap_rest','.num_records')
+      dependencies:
+        - name: customer
+          isValid: true
+      hide: true
+      noOutput: true
+    - name: drSvm
+      type: expression
+      required: true
+      expression: fn.fnRestBasic('get','https://$(cluster_dest.management_ip)/api/svm/svms/?name=$(svm.name)_dr','','ontap_rest','.num_records')
+      dependencies:
+        - name: customer
+          isValid: true
+      hide: false
+      noOutput: true    
+    - name: volume
+      type: text
+      label: Name
+      group: Volume
+      required: true
+      regex:
+        expression: ^[a-z0-9_].*$
+        description: Name must be alfanumeric
+      model: vars_external.meta.name
+      line: volume
+    - name: size
+      type: number
+      label: Size (GB)
+      required: true
+      group: Volume
+      minValue: 5
+      default: 5
+      model: vars_external.meta.size
+      line: volume
 
 
 - name: Resize volume advanced
@@ -258,7 +475,7 @@
   roles:
     - public
   categories:
-    - MAF
+    - LOD
   tileClass: has-background-info-light
   icon: bullseye
   credentials:
