--- a/data/forms/examples.yaml
+++ b/data/forms/examples.yaml
@@ -6,7 +6,8 @@
   description: "Make sure table entries are unique"
   roles:
     - admin
-  categories: []
+  categories: 
+  - Examples
   tileClass: has-background-info-light
   icon: bullseye
   fields:
@@ -73,3 +74,46 @@
     - name: field2
       type: html
       expression: "'<img src=\"https://www.w3schools.com/images/w3schools_green.jpg\" alt=\"W3Schools.com\" width=\"104\" height=\"142\">'"
+- name: Expression Queries
+  showHelp: true
+  help: >
+    This demo grabs information, using various builtin functions.
+    [Read more here](https://github.com/ansibleguy76/ansibleforms/wiki/3.-FAQ#advanced-functions)
+  roles:
+    - public
+  description: An example of the power of expression based queries
+  categories:
+    - Demo
+    - Expressions
+    - Queries
+  tileClass: has-background-warning-light
+  playbook: dummy.yaml
+  inventory: ""
+  type: ansible
+  fields:
+    - type: enum
+      name: user
+      label: Data with Rest (live from internet)
+      default: __auto__
+      required: true
+      outputObject: true
+      multiple: false
+      icon: user
+      expression: fn.fnRestBasic('get','https://gorest.co.in/public/v1/users','','','[.data[]]')
+      columns:
+        - name
+        - email
+      valueColumn: id
+      previewColumn: name
+    - type: enum
+      expression: fn.fnReadYamlFile('/app/dist/persistent/forms.yaml','[.forms[]]')
+      name: forms
+      multiple: true
+      outputObject: false
+      label: Data from Yaml (reading our own forms.yaml)
+      default: __auto__
+      required: false
+      icon: building
+      columns:
+        - name
+        - type
